install/chuubos-api.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chuubos-api
  namespace: chuubos-yaml
  labels:
    app: chuubos-app
    app.kubernetes.io/component: chuubos-api
    app.kubernetes.io/instance: chuubos-api
    app.kubernetes.io/name: chuubos-api
    app.kubernetes.io/part-of: chuubos-app
    app.openshift.io/runtime-namespace: chuubos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chuubos-api
  template:
    metadata:
      labels:
        app: chuubos-api
        deploymentconfig: chuubos-api
    spec:
      containers:
        - name: chuubos-api
          image: >-
            quay.io/secondsun/chuubos-api:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
