install/chuubos-web.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: chuubos-web
  namespace: chuubos-yaml
  labels:
    app: chuubos-web
    app.kubernetes.io/component: chuubos-web
    app.kubernetes.io/instance: chuubos-web
    app.kubernetes.io/name: chuubos-web
    app.kubernetes.io/part-of: chuubos-app
    app.openshift.io/runtime-version: latest
spec:
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80  
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: chuubos-web
    deploymentconfig: chuubos-web
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
