install/chuubos-api.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: chuubos-api
  namespace: chuubos-yaml
  labels:
    app: chuubos-api
    app.kubernetes.io/component: chuubos-api
    app.kubernetes.io/instance: chuubos-api
    app.kubernetes.io/name: chuubos-api
    app.kubernetes.io/part-of: chuubos-app
    app.openshift.io/runtime-version: latest
  annotations:
    openshift.io/host.generated: 'true'
    service.binding/api_host: path={.status.ingress[0].host}     
spec:
  to:
    kind: Service
    name: chuubos-api
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
